@@ -7,15 +7,14 @@
       i18n:domain="collective.portlet.recentactivity">
 <body>
 
-<metal:css fill-slot="css_slot">
-<!--    <style type="text/css" media="all"
-            tal:content="string: @import url(${context/++resource++optilux-cinemacontent.css});"></style>-->
-</metal:css>
-
 <metal:main fill-slot="main">
     <tal:main-macro metal:define-macro="main"
-           tal:define="activities view/recent_activities | nothing">
-
+        tal:define="activities view/recent_activities|nothing;
+                    filter view/filter|nothing;
+                    Batch python:modules['Products.CMFPlone'].Batch;
+                    b_size python:50;
+                    b_start python:0;
+                    b_start request/b_start|b_start;">
         <h1 class="documentFirstHeading"
             i18n:translate="header_recent_activity_report">
           Recent activity
@@ -24,25 +23,10 @@
         <p i18n:translate="description_recent_activity_report">
             This report shows all recent activities.
         </p>
-        <!--
-        <form method="get"
-              tal:attributes="action string:${context/absolute_url}/${view/__name__}">
-              
-            <div i18n:translate="activity_report_days_searched">
-                Show changes in the the last
-                <input type="text" size="2" name="days"
-                    tal:attributes="value view/days"
-                    i18n:name="num_days" />
-                days.
-                <input type="submit" class="context" name="form.button.UpdateDays"
-                    value="Refresh"
-                    i18n:name="submit_button"
-                    i18n:attributes="value" />
-            </div>
-              
-        </form>
-        --> 
-        
+
+        <tal:block tal:define="batch python:Batch(activities, b_size, int(b_start), orphan=1);">
+
+        <div metal:use-macro="here/batch_macros/macros/navigation" />
         <table class="listing" tal:condition="activities">
             <thead>
                 <tr>
@@ -54,7 +38,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr tal:repeat="activity activities">
+                <tr tal:repeat="activity batch">
                     <td tal:content="activity/action" />
                 	<td tal:content="activity/user" />
     	            <td>
@@ -76,6 +60,9 @@
                 </tr>
             </tbody>
         </table>
+        <div metal:use-macro="here/batch_macros/macros/navigation" />
+        
+        </tal:block>
         
     </tal:main-macro>
 </metal:main>
